[kelioniu]:navbar-burger fix

--- a/projects/graded-asignments/kelioniu-puslapis/apie/apie.html
+++ b/projects/graded-asignments/kelioniu-puslapis/apie/apie.html
@@ -12,9 +12,11 @@
       <img src="../pics/logo.svg" alt="" />
       <ul class="nav-links">
         <li>
-          <a href="../index.html"> <u>Pagrindinis</u></a>
+          <a href="../index.html"> Pagrindinis</a>
         </li>
-        <li><a href="./apie.html">Apie Mus</a></li>
+        <li>
+          <a href="./apie.html"><u>Apie Mus</u></a>
+        </li>
         <li><a href="../contacts/contacts.html">Kontaktai</a></li>
       </ul>
       <div class="burger">
@@ -36,9 +38,12 @@
         <div class="burger-links">
           <ul>
             <li>
-              <a href="#"> <u>Pagrindinis</u></a>
+              <a href="../index.html"> Pagrindinis</a>
             </li>
-            <li><a href="./apie.html">Apie Mus</a></li>
+            <li>
+              Apie Mus
+              <a href="./apie.html"><u>Apie Mus</u></a>
+            </li>
             <li><a href="../contacts/contacts.html">Kontaktai</a></li>
           </ul>
         </div>
