--- a/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.html
+++ b/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.html
@@ -12,10 +12,12 @@
       <img src="../pics/logo.svg" alt="" />
       <ul class="nav-links">
         <li>
-          <a href="../index.html"> <u>Pagrindinis</u></a>
+          <a href="../index.html"> Pagrindinis</a>
         </li>
         <li><a href="../apie/apie.html">Apie Mus</a></li>
-        <li><a href="./contacts.html">Kontaktai</a></li>
+        <li>
+          <a href="./contacts.html"><u>Kontaktai</u></a>
+        </li>
       </ul>
       <div class="burger">
         <svg
@@ -36,10 +38,12 @@
         <div class="burger-links">
           <ul>
             <li>
-              <a href="#"> <u>Pagrindinis</u></a>
+              <a href="../index.html"> Pagrindinis</a>
             </li>
-            <li><a href="..apie/apie.html">Apie Mus</a></li>
-            <li><a href="./contacts.html">Kontaktai</a></li>
+            <li><a href="../apie/apie.html">Apie Mus</a></li>
+            <li>
+              <a href="./contacts.html"><u>Kontaktai</u></a>
+            </li>
           </ul>
         </div>
       </div>
