--- a/projects/graded-asignments/kelioniu-puslapis/index.html
+++ b/projects/graded-asignments/kelioniu-puslapis/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--  index.html  -->
+<!--  |--apie/apie.html -->
+<!--  |--contacts/contacts.html -->
 <html lang="lt">
   <head>
     <meta charset="UTF-8" />
