[festival]:+burger:hover,btns:hover

--- a/projects/flex/Festival Site Design/index.html
+++ b/projects/flex/Festival Site Design/index.html
@@ -38,6 +38,13 @@
               fill="#222222"
             />
           </svg>
+          <div class="dropdown">
+            <a href="#artists">ARTISTS</a>
+            <a href="#location">LOCATION</a>
+            <a href="#gallery">GALLERY</a>
+            <a href="#tickets">TICKETS</a>
+            <a href="#contacts">CONTACTS</a>
+          </div>
         </button>
       </nav>
       <div class="banner">
