--- a/projects/landing/index.html
+++ b/projects/landing/index.html
@@ -28,8 +28,8 @@
         <button class="nav-btn">Lorem</button>
       </nav>
     </div>
-    <div class="call-to-action">
-      <div class="descr">
+    <div class="cta-container">
+      <div class="cta-descr">
         <h1>Lorem.</h1>
         <h2>Lorem ipsum dolor sit amet.</h2>
         <p>
@@ -41,10 +41,10 @@
           dignissimos architecto odit, accusamus error maiores omnis at deserunt
           accusantium voluptates!
         </p>
-        <p>Lorem ipsum dolor sit.</p>
-        <button>Action</button>
+        <p class="bold">Lorem ipsum dolor sit.</p>
+        <button>Bliv medlem</button>
       </div>
-      <img src="./assets/tr.png" alt="" />
+      <div class="cta-vid"></div>
     </div>
   </body>
 </html>
