[global] prideti linkai i padarytas uzd

--- a/index.html
+++ b/index.html
@@ -464,6 +464,16 @@
             src="./images/figma/matiuhalnikas.png"
             alt=""
         /></a>
+        <a href="./projects/bootstrap/nica-reklama/index.html"
+          ><img
+            class="screenshots"
+            src="./images/bootstrap/nica-reklama.png"
+            alt=""
+        /></a>
+
+        <a href="./projects/graded-asignments/blog/index.html"
+          ><img class="screenshots" src="./images/figma/blog.png" alt=""
+        /></a>
       </section>
       <section>
         <h2>Naudojant Flex</h2>
@@ -501,14 +511,25 @@
           ><img class="screenshots" src="./images/grid/calculator.png" alt=""
         /></a>
       </section>
+
       <section>
-        <h2 id="work-in-progress">Dabar daroma...</h2>
-        <a href="./projects/bootstrap/nica-reklama/index.html"
+        <h2 id="work-in-progress">Atsiskaitymui</h2>
+        <a href="./projects/graded-asignments/kelioniu-puslapis/index.html"
+          ><img class="screenshots" src="./images/figma/kelioniu.png" alt=""
+        /></a>
+      </section>
+      <section>
+        <h2 id="work-in-progress">DOM + Javascript</h2>
+        <a href="./projects/javaScript/DOM/kepyklele/index.html"
           ><img
             class="screenshots"
-            src="./images/bootstrap/nica-reklama.png"
+            src="./images/js/kepyklos-skaiciuokle.png"
             alt=""
         /></a>
+      </section>
+
+      <section>
+        <h2 id="work-in-progress">Dabar daroma...</h2>
       </section>
 
       <!-- wrknow -->
