--- a/projects/javaScript/DOM/range/index.html
+++ b/projects/javaScript/DOM/range/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="range-element">
-      <div class="rail"></div>
-      <div class="runner">
-        <div class="needle"></div>
+    <div class="container">
+      <div class="range-element">
+        <div class="rail"></div>
+        <div class="runner">
+          <div class="needle"></div>
+        </div>
       </div>
-    </div>
 
-    <div class="ruler">
-      <canvas class="canvas" width="1000" height="200"></canvas>
+      <div class="ruler">
+        <canvas class="canvas" width="1000" height="200"></canvas>
+      </div>
     </div>
     <!-- actually range slider is needed when 
       you want to see quickly results of using some very different values.
@@ -40,18 +42,22 @@ and i don't need to know which ones applied until i find suittable one :)
 same with colors, shaddows, animation params etc.....
 
 border-radii are tricky, gradients
-    -->
+-->
     <script>
       //this runner is not descrete,but continuos
       //goal is to make runner run to clicked coordinates
       const rangeEl = document.querySelector(".range-element");
       const rail = document.querySelector(".rail");
       const runner = document.querySelector(".runner");
+      let needle = document.querySelector(".needle");
+      let rulerContainer = document.querySelector(".ruler");
+      let canvas = document.querySelector(".canvas");
+
       // it moves now
       rangeEl.addEventListener("click", moveToClickedCoord);
       document.addEventListener("keydown", keyHandler);
 
-      drawRuler();
+      logAllRects();
 
       function keyHandler(event) {
         let rangeRect = rangeEl.getBoundingClientRect();
@@ -94,37 +100,36 @@ border-radii are tricky, gradients
         runner.style.left = clickedX - rangeRect.left - halfRunner + "px";
       }
 
-      function drawRuler(arr = [1, 2, 3, 4, 5, 6, 7, 8, 9]) {
-        const ruler = document.querySelector(".canvas");
-        console.log(ruler);
-        //need to map lines to from to step
-        let rulerRect = ruler.getBoundingClientRect();
-        let range = arr.length + 1;
-        let scale = Math.round((rulerRect.width - 50) / (1 * range));
-        let rulerWidth = Math.round(rulerRect.width);
+      function drawRuler(arr = [1, 2, 3, 4, 5, 6, 7, 8, 9]) {}
 
-        console.log(`range is ${range}, scale is ${scale},
-        rulerRect.width is ${rulerWidth},
-        rangexscale is ${range * scale}`);
-        const ctx = ruler.getContext("2d");
+      function logAllRects() {
+        let rangeRect = rangeEl.getBoundingClientRect();
+        let railRect = rail.getBoundingClientRect();
+        let runnerRect = runner.getBoundingClientRect();
+        let needleRect = needle.getBoundingClientRect();
+        let rulerContainerRect = rulerContainer.getBoundingClientRect();
+        let canvasRect = canvas.getBoundingClientRect();
 
-        // Set line properties
-        ctx.strokeStyle = "black"; // Set line color
-        ctx.lineWidth = 1; // Set line width
+        let rectangles = [
+          rangeRect,
+          railRect,
+          runnerRect,
+          needleRect,
+          rulerContainerRect,
+          canvasRect,
+        ];
 
-        // Draw the first vertical line
-        ctx.beginPath(); // Start a new path
-        ctx.resetTransform();
-        ctx.font = "30px Arial";
-        ctx.fillStyle = "black";
-        let i = -1;
-        for (let x = 30; x <= rulerWidth - 100; x += scale) {
-          i++;
-          ctx.moveTo(x, 0);
-          ctx.lineTo(x, 100);
-          ctx.fillText(`${arr[i]}`, x - 10, 150);
-        }
-        ctx.stroke();
+        console.log(`
+
+        rangeRect, railRect, runnerRect, needleRect, rulerContainerRect, canvasRect
+
+        leftSides:
+        ${rectangles.map((r) => r.left)}
+        rightSides:
+        ${rectangles.map((r) => r.right)}
+        widths:
+        ${rectangles.map((r) => r.width)}
+        `);
       }
     </script>
   </body>
