[range]bound view and data

--- a/index.html
+++ b/index.html
@@ -526,6 +526,12 @@
             src="./images/js/kepyklos-skaiciuokle.png"
             alt=""
         /></a>
+        <a href="./projects/javaScript/DOM/range/index.html"
+          ><img class="screenshots" src="./images/js/range.png" alt=""
+        /></a>
+        <a href="./projects/javaScript/DOM/canvas/plottingGraphs.html"
+          ><img class="screenshots" src="./images/js/plot-graph.png" alt=""
+        /></a>
       </section>
 
       <section>
